--- a/Prompt_to_JSON_Enhancer/readme
+++ b/Prompt_to_JSON_Enhancer/readme
@@ -1,1 +1,7 @@
 
+## Prompt-to-JSON Enhancer (Browser Extension / Web App) 
+Plain text prompts often lead to inconsistent outputs. Structured prompting (e.g., using 
+JSON) produces more accurate results because it defines context, problem, expected 
+solution, and output format clearly.
+
+
